# storage/api-docs/api-docs.json
@@ -7,14 +7,16 @@
     },
     "servers": [
         {
-            "url": "https://testlarvel.udhost.in",
+            "url": "http://localhost",
             "description": "Localhost API Server"
         }
     ],
     "paths": {
         "/api/hello": {
             "get": {
-                "tags": ["Hello"],
+                "tags": [
+                    "Hello"
+                ],
                 "summary": "Returns a hello message",
                 "operationId": "140551e528d47f47b5c1460e5a530ed5",
                 "responses": {
@@ -38,6 +40,35 @@
             }
         }
     },
+    "components": {
+        "schemas": {
+            "User": {
+                "title": "User",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "John Doe"
+                    },
+                    "email": {
+                        "type": "string",
+                        "example": "john@example.com"
+                    }
+                },
+                "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
+        }
+    },
     "tags": [
         {
             "name": "Hello",
@@ -45,4 +76,3 @@
         }
     ]
 }
-
